--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Pagina">
   <meta name="author" content="Marilyn Yudy Quispe Ticona">
-  <meta property="og:title" content="Marilyn Quispe" />
-  <meta property="og:type" content="Marilyn" />
+  <meta property="og:title" content="Marilyn Quispe"/>
+  <meta property="og:type" content="Marilyn"/>
   <meta property="og:url" content="images/myqt.png" />
   <meta property="og:image" content="images/myqt.png" />
   <meta property="og:description" content="Description Here" />
@@ -21,8 +21,35 @@
 </head>
 <body>
     <div>
-      MARILYN YUDY QUISPE TICONA
-      soy de la utp ffff
+      <table >
+        <h1 style="padding: 4% 0 2% 4%;">DATOS PERSONALES</h1>
+        <tr>
+          <td style="width: 50%;margin:auto;padding-left: 10%;">
+            <ul><li>NOMBRE:</li>
+              <ul><li class="color">MARILYN YUDY</li></ul>
+            </ul> 
+            <ul><li>APELLIDOS:</li>
+              <ul><li class="color">QUISPE TICONA</li></ul>
+            </ul> 
+            <ul><li>CARRERA:</li>
+              <ul><li class="color">INGENIERIA DE SISTEMAS </li></ul>
+            </ul>
+            <ul><li>CURSO:</li>
+              <ul><li class="color">TALLER DE PROGRAMACION WEB </li></ul>
+            </ul>
+            <ul><li>CICLO:</li>
+              <ul><li class="color">6TO CICLO</li></ul>
+            </ul> 
+            <ul><li>AÑO:</li>
+              <ul><li class="color">2021</li></ul>
+            </ul>
+           </td>
+           <td>
+             <img style="width: 50%;" src="images/marilyn.jpeg">
+           </td>
+        </tr>
+      </table>
+      
     </div>
 </body>
 </html>
