--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                 Contactos
               </a>
             </li>
+            <li>
+              <a href="#Curriculum" class="nav-link text-white">
+                <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"></use></svg>
+                Curriculum
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -109,9 +115,6 @@
     <section id="Contactos">
       <h1>CONTACTOS</h1>
       <fieldset class="contactos">
-        <legend>
-          <strong>Mensaje</strong>
-        </legend>
         <p>Nombre:
           <br>
           <input type="text" placeholder="Ingrese su Nombre" size="50">
@@ -129,7 +132,7 @@
         </p>
         <textarea name="" id="" cols="53" rows="5"></textarea>
         <input type='submit' value='Envia Mensaje'>
-    </fieldset>
+      </fieldset>
     </section>
     
 </body>
