--- a/index.html
+++ b/index.html
@@ -67,12 +67,47 @@
                 Curriculum
               </a>
             </li>
+            <li>
+              <a href="cursos.html" class="nav-link text-white">
+                <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"></use></svg>
+                Cursos
+              </a>
+            </li>
           </ul>
         </div>
       </div>
     </header>
+    <section>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="..." alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
     <section id="Inicio">
       <div class="Inicio_header">
+        <img src="../utp/images/icono.png">
       </div>
     </section>
     <section id="Sobre_mi">
@@ -85,7 +120,7 @@
                 <ul><li class="color">MARILYN YUDY</li></ul>
               </ul> 
               <ul><li>APELLIDOS:</li>
-                <ul><li class="color">QUISPE TICONA</li></ul>
+                <ul><li class="rcolo">QUISPE TICONA</li></ul>
               </ul> 
               <ul><li>CARRERA:</li>
                 <ul><li class="color">INGENIERIA DE SISTEMAS </li></ul>
@@ -107,6 +142,11 @@
         </table>
         
       </div>
+    </section>
+    <section class="mensaje text-center">
+      <hr class="hr-arriba">
+      <h1 class="style-title">"Siempre hay que seguir intentandolo hasta conseguir nuestro objetivo"</h1>
+      <hr class="hr-abajo">
     </section>
     <section id="Portafolio">
       <h1>PORTAFOLIO</h1>
